# HTHC

./: .gitignore  CMakeLists.txt  README.md  algebra.cpp  algebra.h  main.cpp  measurements.cpp  measurements.h  piece_pool.cpp  piece_pool.h  readers.cpp  readers.h  task_a.cpp  task_a.h  task_b.cpp  task_b.h  threaded.cpp  threaded.h  vectorized.cpp  vectorized.h
data/: Makefile  parse.cpp
include/: CloverBase.h  CloverRandom.h  CloverVector.h  CloverVector16.h  CloverVector32.h  CloverVector4.h  CloverVector8.h
